--- a/app/src/main/res/layout/layout_main.xml
+++ b/app/src/main/res/layout/layout_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
+    <!-- Recipe name -->
     <TextView
         android:id="@+id/tv_recipe_name"
         android:layout_width="match_parent"
@@ -21,8 +21,9 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="2" />
+        tools:text="Nutella Pie" />
 
+    <!-- To separate views -->
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
