--- a/app/src/main/res/layout-land/activity_details.xml
+++ b/app/src/main/res/layout-land/activity_details.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         tools:context=".activity.DetailsActivity">
 
-
+        <!-- RecyclerView for Steps -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_steps"
             android:layout_width="wrap_content"
@@ -26,35 +26,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_step_label" />
 
+        <!-- Recipe name -->
         <TextView
             android:id="@+id/tv_recipe_name"
-            android:layout_width="match_parent"
+            style="@style/recipe"
             android:layout_height="50dp"
-            android:background="@color/headers"
-            android:gravity="center"
-            tools:text="CheeseCake"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="CheeseCake" />
 
+        <!-- Steps label -->
         <TextView
             android:id="@+id/tv_step_label"
+            style="@style/landscape"
             android:layout_width="150dp"
-            android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
-            android:background="@color/headers"
-            android:gravity="center"
             android:text="@string/steps_label"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image" />
 
+        <!-- Recipe image -->
         <ImageView
             android:id="@+id/image"
             android:layout_width="250dp"
@@ -65,6 +58,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name" />
 
+        <!-- RecyclerView for ingredients -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_ingredient"
             android:layout_width="wrap_content"
@@ -74,18 +68,14 @@
             app:layout_constraintStart_toEndOf="@+id/image"
             app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_label" />
 
+        <!-- Ingredients label -->
         <TextView
             android:id="@+id/tv_ingredient_label"
+            style="@style/landscape"
             android:layout_width="130dp"
-            android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:background="@color/headers"
-            android:gravity="center"
             android:text="@string/ingredients_label"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/image"
             app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name" />
 
