--- a/app/src/main/res/layout-sw600dp/activity_details.xml
+++ b/app/src/main/res/layout-sw600dp/activity_details.xml
@@ -16,17 +16,14 @@
         android:layout_weight="4">
 
 
+        <!-- Recipe name -->
         <TextView
             android:id="@+id/tv_recipe_name"
-            android:layout_width="match_parent"
+            style="@style/recipe"
             android:layout_height="50dp"
-            android:background="@color/headers"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold"
             tools:text="CheeseCake" />
 
+        <!-- Recipe image -->
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
@@ -37,37 +34,34 @@
             android:layout_marginRight="8dp"
             app:srcCompat="@mipmap/ic_launcher" />
 
-
+        <!-- Button to show or hide ingredients-->
         <Button
             android:id="@+id/btn_show_hide"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="16dp"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_marginLeft="8dp"
-            android:textColor="@color/white"
-            android:background="@color/headers"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/image"
-            android:text="Show Ingredients"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="16dp"
+            android:background="@color/headers"
+            android:text="@string/show_ingredients"
+            android:textColor="@color/white"
+            android:textSize="18sp"
+            android:textStyle="bold"
             android:visibility="invisible" />
 
+        <!-- Ingredients label -->
         <TextView
             android:id="@+id/tv_ingredient_label"
-            android:layout_width="match_parent"
+            style="@style/labels"
             android:layout_height="30dp"
             android:layout_below="@+id/image"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/headers"
-            android:gravity="center"
-            android:text="@string/ingredients_label"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:text="@string/ingredients_label" />
 
+        <!-- RecyclerView for ingredients -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_ingredient"
             android:layout_width="match_parent"
@@ -79,21 +73,18 @@
 
         </android.support.v7.widget.RecyclerView>
 
+        <!-- Steps label -->
         <TextView
             android:id="@+id/tv_step_label"
-            android:layout_width="match_parent"
+            style="@style/labels"
             android:layout_height="30dp"
             android:layout_below="@+id/recycler_view_ingredient"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/headers"
-            android:gravity="center"
-            android:text="@string/steps_label"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:text="@string/steps_label" />
 
+        <!-- RecyclerView for Steps -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_steps"
             android:layout_width="match_parent"
@@ -109,13 +100,14 @@
 
     </RelativeLayout>
 
-
+    <!-- View between master and detail fragment -->
     <View
         android:layout_width="1dp"
         android:layout_height="wrap_content"
         android:background="@android:color/darker_gray" />
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <!-- Container for fragment -->
+    <FrameLayout
         android:id="@+id/detailContainer"
         android:layout_width="0dp"
         android:layout_height="match_parent"
