--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         tools:context=".activity.DetailsActivity">
 
-
+        <!-- RecyclerView for Steps -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_steps"
             android:layout_width="match_parent"
@@ -29,37 +29,30 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_step_label" />
 
+        <!-- Recipe name -->
         <TextView
             android:id="@+id/tv_recipe_name"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="@color/headers"
-            android:gravity="center"
-            tools:text="CheeseCake"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold"
+            style="@style/recipe"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="CheeseCake" />
 
+        <!-- Steps label -->
         <TextView
             android:id="@+id/tv_step_label"
-            android:layout_width="match_parent"
+            style="@style/labels"
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/headers"
-            android:gravity="center"
             android:text="@string/steps_label"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recycler_view_ingredient" />
 
+        <!-- Recipe image -->
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
@@ -72,6 +65,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name" />
 
+        <!-- RecyclerView for ingredients -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_ingredient"
             android:layout_width="match_parent"
@@ -84,19 +78,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_label" />
 
+        <!-- Ingredients label -->
         <TextView
             android:id="@+id/tv_ingredient_label"
-            android:layout_width="match_parent"
+            style="@style/labels"
             android:layout_height="30dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:background="@color/headers"
-            android:gravity="center"
             android:text="@string/ingredients_label"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/image" />
