--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -7,7 +7,7 @@
     tools:context=".activity.VideoActivity">
 
 
-
+    <!-- Exoplayer view -->
     <com.google.android.exoplayer2.ui.SimpleExoPlayerView
         android:id="@+id/exo_player_view"
         android:layout_width="match_parent"
@@ -21,14 +21,15 @@
 
     </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
 
+    <!-- Description of the video -->
     <TextView
         android:id="@+id/tv_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
