--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Exoplayer view -->
         <com.google.android.exoplayer2.ui.SimpleExoPlayerView
             android:id="@+id/exo_player_view"
             android:layout_width="match_parent"
@@ -23,6 +24,7 @@
 
         </com.google.android.exoplayer2.ui.SimpleExoPlayerView>
 
+        <!-- Description of the video -->
         <TextView
             android:id="@+id/tv_description"
             android:layout_width="match_parent"
@@ -38,10 +40,7 @@
             tools:text="@string/description" />
 
 
-
-
     </android.support.constraint.ConstraintLayout>
-
 
 
 </FrameLayout>
