--- a/app/src/main/res/layout/fragment_master.xml
+++ b/app/src/main/res/layout/fragment_master.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent"
         tools:context=".activity.DetailsActivity">
 
-
+        <!-- RecyclerView for Steps -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_steps"
             android:layout_width="match_parent"
@@ -29,6 +29,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_step_label" />
 
+        <!-- Recipe name -->
         <TextView
             android:id="@+id/tv_recipe_name"
             android:layout_width="match_parent"
@@ -43,6 +44,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <!-- Steps label -->
         <TextView
             android:id="@+id/tv_step_label"
             android:layout_width="match_parent"
@@ -60,6 +62,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/recycler_view_ingredient" />
 
+        <!-- Recipe image -->
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
@@ -72,6 +75,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_recipe_name" />
 
+        <!-- RecyclerView for ingredients -->
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view_ingredient"
             android:layout_width="match_parent"
@@ -84,6 +88,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_ingredient_label" />
 
+        <!-- Ingredients label -->
         <TextView
             android:id="@+id/tv_ingredient_label"
             android:layout_width="match_parent"
