--- a/app/src/main/res/layout/layout_steps.xml
+++ b/app/src/main/res/layout/layout_steps.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-
+    <!-- Short description -->
     <TextView
         android:id="@+id/tv_short_description"
         android:layout_width="wrap_content"
@@ -20,6 +20,7 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Recipe Introduction" />
 
+    <!-- play icon -->
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
