--- a/app/src/main/res/layout-land/activity_video.xml
+++ b/app/src/main/res/layout-land/activity_video.xml
@@ -5,7 +5,7 @@
     android:id="@+id/constraint_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.VideoActivity">
+    tools:context=".ui.video.VideoActivity">
 
 
     <!-- Exoplayer view -->
